@@ -366,6 +366,9 @@ IF( ENABLE_KDE_SUPPORT )
         TARGET_LINK_LIBRARIES(cantata ${MTP_LIBRARIES})
         include_directories( ${MTP_INCLUDE_DIR})
     endif (MTP_FOUND)
+    if (ENABLE_REMOTE_DEVICES)
+        TARGET_LINK_LIBRARIES(cantata ${KDE4_KFILE_LIBS})
+    endif (MTP_FOUND)
     install( TARGETS cantata ${INSTALL_TARGETS_DEFAULT_ARGS} )
     install( PROGRAMS dynamic/cantata-dynamic DESTINATION ${LIBEXEC_INSTALL_DIR})
     install( FILES cantataui.rc DESTINATION ${DATA_INSTALL_DIR}/cantata )
